# Math-Visualizer

./: CMakeLists.txt  CMakePresets.json  Config.cmake.in  imgui.ini  vcpkg.json
cmake/: AppImage.cmake  Embed.cmake  Libraries.cmake  Libs.cmake  ProjectOptions.cmake
data/: make_appimage.sh  spline.desktop
include/mv/: application.hpp  application_2d.hpp  application_3d.hpp  camera.hpp  color.hpp  point.hpp  rect.hpp  resource.hpp  shader.hpp  waterfall.hpp  waterfall_application.hpp
include/mv/gl/: axes_2d.hpp  axes_3d.hpp  gl_init.hpp  instance_parameters.hpp  instances_holder.hpp  instancing.hpp  plot.hpp  shapes_storage.hpp  texture.hpp  texture3d.hpp  vao.hpp  vbo.hpp  vertices_binder.hpp  vertices_container.hpp  waterfall.hpp  waterfall_application.hpp
include/mv/gl/shaders/: color_shader.hpp  shader_with_positioning.hpp
include/mv/gl/shape/: function.hpp  function_3d.hpp  plot_2d.hpp  prism.hpp  rectangle.hpp  shape.hpp  sphere.hpp
include/mv/gl/shape/detail/: lines_shape.hpp  polygon.hpp  polygons_shape.hpp  polygons_shape_fan.hpp
include/mv/glfw/: callbacks.hpp  glfw_init.hpp
include/mvl/: math_grammar.hpp  mvl.hpp
include/mvl/ast/: cos.hpp  expression.hpp  factor.hpp  function.hpp  math_node.hpp  power.hpp  sin.hpp  term.hpp  tg.hpp  value.hpp
programs/: CMakeLists.txt  computation-2-part-2.cpp  computation-2.cpp  dft.cpp  equation.cpp  function_gradient.cpp  function_visualizer.cpp  integrals.cpp  mandelbrot_fractal.cpp  physics.astlang  physics.cpp  spline.cpp  spline3d.cpp  system.cpp  texture3d.cpp  waterfall.cpp  waterfall.hpp  waterfall_application.cpp
resources/shaders/: colored_shader.vert  fractal.frag  fractal.vert  fragment.frag  julia_fractal.frag  julia_fractal.vert  mandelbrot_fractal.frag  mandelbrot_fractal.vert  static_instance.vert  texture.frag  texture.vert  vertex.vert
resources/shaders/fractal/: common.glsl  default.vert  julia.frag  mandelbrot.frag  newton.frag  newton_classic.frag  newton_sin.frag  with_offset.vert
resources/shaders/tex3d/: linear_with_fixed_level.frag
resources/shaders/waterfall/: hsv_static.vert  rgba_rgba.frag  static.vert  vertex_with_limits_f32.vert
resources/shaders/waterfall/hsv/: f32_rgba.frag  hsv2rgb.glsl  hsv_static.frag  u32_rgba.frag
resources/shaders/waterfall/linear/: f32_rgba.frag  linear_rgb.glsl  linear_static.frag  u32_rgba.frag
src/: CMakeLists.txt  application.cpp  application_2d.cpp  main.cpp  shader.cpp
src/gl/: init.cpp  plot.cpp  vao.cpp
src/mv/: application.cpp  application_2d.cpp  application_3d.cpp  shader.cpp
src/mv/gl/: gl_init.cpp  init.cpp  plot.cpp  plot_2d.cpp  plot_3d.cpp  texture.cpp  texture3d.cpp  vao.cpp  vbo.cpp  waterfall.cpp
src/mv/gl/shaders/: color_shader.cpp  shader_with_positioning.cpp
src/mv/gl/shape/: fuction.cpp  function_plot_2d.cpp  prism.cpp  sphere.cpp
src/mv/glfw/: callbacks.cpp  glfw_init.cpp  init.cpp
src/mv/waterfall/: watefall_io.cpp  waterfall_init.cpp  waterfall_update.cpp
src/mvl/: math_grammar.cpp  mvl.cpp
src/mvl/ast/: math_node.cpp
